--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Built with Jekyll 3.6.0
 
 # Setup
-title:               Nos Cambio la Vida / Our Lives Transformed
-tagline:             'draft'
-description:         'Nos Cambio la Vida is a digital edition of short autobiographical narratives written by Dominican writers of Haitian descent that have 			 been translated into English.'
+title:               Nos Cambió la Vida
+tagline:             'Our Lives Transformed'
+description:         'Nos Cambió la Vida is a digital edition of short autobiographical narratives written by Dominican writers of Haitian descent that have 			 been translated into English.'
 url:                 'https://github.com/dhc-barnard/nos-cambio-la-vida.git'
 baseurl:             ''
 
