--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,6 @@ _site
 *.err
 *.orig
 *.log
-*.rake
 *.rej
 *.swo
 *.swp
@@ -51,6 +50,10 @@ _texts
 .sass-cache
 .jekyll-metadata
 Gemfile.lock
+
+
+# Also ignore
+Rakefile.rb
 
 # BackstopJS Test Files and Reports
 backstop_data/bitmaps_test
